// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render MovieCardPoster big auth 1`] = `
<div
  className="movie-card__poster movie-card__poster--big"
>
  <img
    alt="The Grand Budapest Hotel poster"
    height="327"
    src="img/the-grand-budapest-hotel-poster.jpg"
    width="218"
  />
</div>
`;

exports[`Render MovieCardPoster small auth 1`] = `
<div
  className="movie-card__poster movie-card__poster--small"
>
  <img
    alt="The Grand Budapest Hotel poster"
    height="327"
    src="img/the-grand-budapest-hotel-poster.jpg"
    width="218"
  />
</div>
`;

exports[`Render MovieCardPoster without classname auth 1`] = `
<div
  className="movie-card__poster "
>
  <img
    alt="The Grand Budapest Hotel poster"
    height="327"
    src="img/the-grand-budapest-hotel-poster.jpg"
    width="218"
  />
</div>
`;
